overflow fixed

--- a/style.css
+++ b/style.css
@@ -164,6 +164,7 @@ label {
 }
 
 #loading {
+  overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -222,7 +223,7 @@ label {
 }
 
 label i {
-    font-size: 30px;
-    color:#ffcc00;
-    margin: 0 10px;
+  font-size: 30px;
+  color: #ffcc00;
+  margin: 0 10px;
 }
